# morelab-python

./: .gitignore  README.md
QTM/: MoreLab-Scripting.py  fix_sips.py  test_menu.py
QTM/pipelines/: __init__.py  apply_aim_model.py  auto_label.py  batch_calibration.py  breakdown_trajectories.py  calibrations.py  custom_filters.py  discard_current_frame.py  filters.py  fix_sip.py  fix_sips.py  foot_gap_fill_relational.py  labelling_workflow.py  other.py  pelvis_gap_fill_relational.py  remove_spikes.py  select_unidentified_markers.py  shank_gap_fill_relational.py  skeleton_solver_workflow.py  split_trajectory_at_spikes.py  thigh_gap_fill_relational.py  unidentify_parts.py  workflow.py
database/: create_tables.sql  new_database.sh
ingest/: __init__.py  __main__.py  database.py  ingest.py  paf_parser.py  project_structure.py  pyproject.toml  settings_parser.py  test_db_connection.py
project/: __init__.py  __main__.py  database.py  environment.yml  pyproject.toml  register_qtm_files.py
